--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.2",
     "gulp-concat-css": "^2.2.0",
+    "gulp-exec": "^2.1.2",
     "gulp-imagemin": "^2.3.0",
-    "gulp-jspm": "^0.4.1",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
@@ -34,7 +34,9 @@
   "jspm": {
     "configFile": "jspm.config.js",
     "dependencies": {
-      "jquery": "github:components/jquery@^2.1.4"
+      "jquery": "github:components/jquery@^2.1.4",
+      "jquery-mask-plugin": "npm:jquery-mask-plugin@^1.13.4",
+      "jquery-validation": "github:jzaefferer/jquery-validation@^1.14.0"
     },
     "devDependencies": {
       "traceur": "github:jmcriffey/bower-traceur@0.0.91",
